shopizer-local/k8s/platform/manifests/ingress/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terraform-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
          - path: /merchants
            pathType: Prefix
            backend:
              service:
                name: merchants
                port:
                  number: 80
          - path: /references
            pathType: Prefix
            backend:
              service:
                name: references
                port:
                  number: 80
          - path: /shop
            pathType: Prefix
            backend:
              service:
                name: shop
                port:
                  number: 80
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users
                port:
                  number: 80
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: orders
                port:
                  number: 80
    - host: keycloak
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
